--- a/Nivel1-A/Documentos/Videos/clase1.tex
+++ b/Nivel1-A/Documentos/Videos/clase1.tex
@@ -9,12 +9,12 @@
 
 \end{frame}
 
-\subsection{Tipos de sensores y órbitas}
+\subsection{Sistemas de adquisición y órbitas}
 
 \begin{frame}{\secname : \subsecname}
 
 \begin{block}{Sensores y plataformas}
-  Cuando hablamos adquisición de imágenes satelitales hablamos de dos componentes fundamentales:
+  Componentes en un sistema de adquisición:
   \begin{itemize}
     \item El \emph{Sensor} que toma la imagen.
     \item La \emph{Plataforma} que transporta al sensor
@@ -50,13 +50,13 @@
   Algunos ejeplos de plataformas y sensores pasivos son
   \begin{itemize}
     \item<1->{Landsat 5 - TM}
-    \item<3-> Landsat 7 - ETM
-    \item<4-> Landsat 8 - OLI,TIRS
-    \item<5-> TERRA - MODIS
+    \item<2-> Landsat 7 - ETM
+    \item<3-> Landsat 8 - OLI,TIRS
+    \item<4-> TERRA - MODIS
     \item<5-> AQUA - MODIS
     \item<6-> Sentinel 2A - MSI
-    \item<6-> Sentinel 2B - MSI
-    \item<7-> Sentinel 3A - SLSRT, OLCI, SRAL, DORIS, MWR, LRR, GNSS
+    \item<7-> Sentinel 2B - MSI
+    \item<8-> Sentinel 3A - SLSRT, OLCI, SRAL, DORIS, MWR, LRR, GNSS
   \end{itemize}
 \end{frame}
 %--- Next Frame ---%
@@ -65,10 +65,10 @@
 \only<1>{Tipos de órbitas.}
 \only<2->{
 \begin{block}{Clasificación de órbitas}
-   Una órbita es el camino que recorre un cuerpo en el espacio. Las dos más importantes para teledetección son:
+   Una órbita es el camino que recorre un cuerpo en el espacio. Las dos más importantes en teledetección son:
    \begin{itemize}
      \item \emph{Polares}: Orbitando en torno a la tierra en dirección norte-sur o sur-norte.
-     \item \emph{Geoestacionarias}: Orbitando a la tierra mirando siempre al mismo punto.
+     \item \emph{Geoestacionarias}: Orbitando en el mismo sentido y velocidad angular que la tierra.
    \end{itemize}
 \end{block}}
 \end{frame}
