--- a/Nivel1-A/Documentos/Videos/clase5.tex
+++ b/Nivel1-A/Documentos/Videos/clase5.tex
@@ -3,7 +3,7 @@
 \subsection{Clasificación}
 \begin{frame}{\secname : \subsecname}
 \begin{block}{Concepto de clasificación}
-  Clasificar es convertir valores espectrales a clases de información.
+  Clasificar es convertir valores espectrales en clases de información.
 \end{block}
 \end{frame}
 %--- Next Frame ---%
