--- a/Nivel1-A/Documentos/Videos/presentacion.tex
+++ b/Nivel1-A/Documentos/Videos/presentacion.tex
@@ -1,4 +1,4 @@
-\documentclass[aspectratio=169]{beamer}
+/\documentclass[aspectratio=169]{beamer}
 %\usepackage[•]{•}sepackage{pgfpages}
 %\pgfpagesuselayout{4 on 1}[a4paper,border shrink=5mm]
 \usetheme[block=fill,progressbar=frametitle,numbering=none]{metropolis}
