--- a/Nivel1-A/Documentos/Videos/clase6.tex
+++ b/Nivel1-A/Documentos/Videos/clase6.tex
@@ -1,13 +1,13 @@
-\section{CONAE y aplicaciones}
-\subsection{Plan espacial nacional}
-\begin{frame}{\secname : \subsecname}
-  \begin{figure}
-    \centering
-    \includegraphics[width=0.65\textwidth]{fig:plan}
-    \caption{Satélites del plan espacial nacional.}
-    \label{}
-  \end{figure}
-\end{frame}
+%\section{CONAE y aplicaciones}
+%\subsection{Plan espacial nacional}
+%\begin{frame}{\secname : \subsecname}
+ % \begin{figure}
+  %  \centering
+   % \includegraphics[width=0.65\textwidth]{fig:plan}
+    %\caption{Satélites del plan espacial nacional.}
+    %\label{}
+  %\end{figure}
+%\end{frame}
 %--- Next Frame ---%
 
 \subsection{Aplicaciones de la teledetección}
