actualizacion clase1 resolucion espacial y temporal

--- a/Nivel1-A/Documentos/Videos/clase1.tex
+++ b/Nivel1-A/Documentos/Videos/clase1.tex
@@ -83,7 +83,18 @@
   \end{figure}
 \end{frame}
 %--- Next Frame ---%
+\begin{frame}{\secname : \subsecname}
+\only<1>{Resolución espacial.}
 
+\end{frame}
+
+%--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
+    \begin{block}{Definición}
+        Es la capacidad del sensor de distinguir objetos en el terreno.%ver definición
+    \end{block}
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              \end{frame}
 
 \subsection{Resolución espacial y temporal}
 
@@ -105,6 +116,17 @@
     \label{}
   \end{figure}
 \end{frame}
+%--- Next Frame ---%
+
+
+%\begin{frame}{\secname : \subsecname}
+ %   \begin{figure}[h!]
+  %      \centering
+   %     \includegraphics[width=0.5\textwidth]{fig:pixel.png}
+    %    \caption{Formación de una celda de informacion.}
+%    \end{figure}
+%\end{frame}
+
 %--- Next Frame ---%
 
 \begin{frame}{\secname : \subsecname}
@@ -135,21 +157,7 @@
     \label{}
   \end{figure}
 \end{frame}
-%--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
-    \begin{block}{Definición}
-        Es la capacidad del sensor de distinguir objetos en el terreno.%ver definición
-    \end{block}
-\end{frame}
-%--- Next Frame ---%
-\begin{frame}{\secname : \subsecname}
-    \begin{figure}[h!]
-        \centering
-        \includegraphics[width=0.5\textwidth]{fig:pixel.png}
-        \caption{Formación de un  pixel.}
-    \end{figure}
-\end{frame}
 
 %--- Next Frame ---%
 
@@ -197,13 +205,28 @@
     \end{figure}
 \end{frame}
 %--- Next Frame ---%
+%--- Next Frame ---%
+\begin{frame}{\secname : \subsecname}
+\only<1>{Resolución temporal.}
 
+\end{frame}
 
 \begin{frame}{\secname : \subsecname}
     \begin{block}{Definición}
         Es el tiempo de revisita.
     \end{block}
 \end{frame}
+%--- Next Frame ---%
+
+
+\begin{frame}{\secname : \subsecname}
+    \begin{figure}[h!]
+    \centering
+    \movie[width = 0.6 \textwidth,loop]{\centering\includegraphics[width=0.6\textwidth]{fig:maria.png}}{./figs/fig:maria.mp4}
+    \caption{Evolución del huracán María en el mes de septiembre de 2017. (\href{https://goo.gl/M5595z}{https://goo.gl/M5595z}).}
+    \end{figure}
+\end{frame} 
+
 %--- Next Frame ---%
 
 \begin{frame}{\secname : \subsecname}
@@ -234,15 +257,7 @@
         \label{fig:lake-aft}
     \end{figure}
 \end{frame}
-%--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
-    \begin{figure}[h!]
-    \centering
-    \movie[width = 0.6 \textwidth,loop]{\centering\includegraphics[width=0.6\textwidth]{fig:maria.png}}{./figs/fig:maria.mp4}
-    \caption{Evolución del huracán María en el mes de septiembre de 2017. (\href{https://goo.gl/M5595z}{https://goo.gl/M5595z}).}
-    \end{figure}
-\end{frame}
 %--- Next Frame ---%
 
 \begin{frame}{\secname : \subsecname}
