se agregaron instrumentos a diapo de plataformas y sensores pasivos

--- a/Nivel1-A/Documentos/Videos/clase1.tex
+++ b/Nivel1-A/Documentos/Videos/clase1.tex
@@ -1,9 +1,9 @@
 \section{Introducción a la teledetección}
 
 %--- Next Frame ---%
-\subsection{Definición sensores remotos}
+\subsection{Definición}
 \begin{frame}{\secname : \subsecname}
-\begin{block}{Sensores remotos}
+\begin{block}{Teledetección}
  Capacidad de obtener información de un objeto o fenómeno sin estar en contacto directo con él \footfullcite{Jensen 2008}.
 \end{block}
 
@@ -16,8 +16,8 @@
 \begin{block}{Sensores y plataformas}
   Componentes en un sistema de adquisición:
   \begin{itemize}
-    \item El \emph{Sensor}, que toma la imagen.
-    \item La \emph{Plataforma}, que transporta al sensor
+    \item El \emph{Sensor}.
+    \item La \emph{Plataforma}.
   \end{itemize}
 \end{block}
 
@@ -47,13 +47,13 @@
 %--- Next Frame ---%
 
 \begin{frame}{\secname : \subsecname}
-  Algunos ejemplos de plataformas y sensores pasivos son:
+  Algunos ejemplos de plataformas y sensores pasivos:
   \begin{itemize}
     \item<1->{Landsat 5 - TM}
     \item<2-> Landsat 7 - ETM
     \item<3-> Landsat 8 - OLI,TIRS
-    \item<4-> TERRA - MODIS
-    \item<5-> AQUA - MODIS
+    \item<4-> TERRA - MODIS, ASTER, CERES, MISR, MOPITT
+    \item<5-> AQUA - MODIS, AIRS, AMSU, CERES, AMSR-E, HSB 
     \item<6-> Sentinel 2A - MSI
     \item<7-> Sentinel 2B - MSI
     \item<8-> Sentinel 3A - SLSRT, OLCI, SRAL, DORIS, MWR, LRR, GNSS
