--- a/Nivel1-A/Documentos/Videos/preamble.tex
+++ b/Nivel1-A/Documentos/Videos/preamble.tex
@@ -14,7 +14,7 @@
 \usepackage{hyperref}
 % Texto mas lindo para los pie de figura
 \usepackage[margin=10pt,font=small,labelfont=bf, labelsep=endash]{caption}
-
+\usepackage{siunitx}
 \usepackage{smartdiagram}
 \usesmartdiagramlibrary{additions}
 
