agrego diapositivas elementos interpretacion visual

--- a/Nivel1-A/Documentos/Videos/clase2.tex
+++ b/Nivel1-A/Documentos/Videos/clase2.tex
@@ -143,22 +143,8 @@
          \end{block}
 \end{frame}
 
-
-
-%--- Next Frame ---%
-\begin{frame}{\secname : \subsecname}
-    \begin{block}{Definición}
-       radiancia reflejada sobre incidente:
-        \begin{equation}
-         P_\lambda = \frac{L_{p,\lambda}}{L_{0,\lambda}} ,
-        \end{equation}
-         \end{block}
-\end{frame}
-
 %--- Next Frame ---%
 
-
-%--- Next Frame ---%
 
 
 
@@ -227,6 +213,63 @@
   \end{figure}
 \end{frame}
 %--- Next Frame ---%
+\begin{frame}{\secname : \subsecname}
+    \begin{block}{Interpretacion visual de imagenes}
+       Veremos ahora algunos elementos de interpretación visual de imágenes.
+       
+    \end{block}
+\end{frame}
+
+%--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
+    \begin{block}{Interpretacion visual de imagenes}
+      Textura.
+       
+    \end{block}
+\end{frame}
+%--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
+    \begin{block}{Interpretacion visual de imagenes}
+     Patrón.
+       
+    \end{block}
+\end{frame}
+
+%--- Next Frame ---%
+\begin{frame}{\secname : \subsecname}
+    \begin{block}{Interpretacion visual de imagenes}
+      Tamaño.
+       
+    \end{block}
+\end{frame}
+
+%--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
+    \begin{block}{Interpretacion visual de imagenes}
+      Forma.
+       
+    \end{block}
+\end{frame}
+
+%--- Next Frame ---%
+\begin{frame}{\secname : \subsecname}
+    \begin{block}{Interpretacion visual de imagenes}
+      Brillo.
+       
+    \end{block}
+\end{frame}
+%--- Next Frame ---%
+\begin{frame}{\secname : \subsecname}
+    \begin{block}{Interpretacion visual de imagenes}
+     Color.
+       
+    \end{block}
+\end{frame}
+%--- Next Frame ---%
+
 
 \subsection{Interpretación visual}
 
@@ -249,6 +292,8 @@
   \end{figure}
 \end{frame}
 %--- Next Frame ---%
+
+
 
 \begin{frame}{\secname : \subsecname}
   \begin{figure}
