se agregaron diapositivas para interpretacion visual

--- a/Nivel1-A/Documentos/Videos/clase2.tex
+++ b/Nivel1-A/Documentos/Videos/clase2.tex
@@ -213,34 +213,11 @@
   \end{figure}
 \end{frame}
 %--- Next Frame ---%
+\subsection{Interpretación visual}
+
 \begin{frame}{\secname : \subsecname}
     \begin{block}{Interpretacion visual de imagenes}
        Veremos ahora algunos elementos de interpretación visual de imágenes.
-       
-    \end{block}
-\end{frame}
-
-%--- Next Frame ---%
-
-\begin{frame}{\secname : \subsecname}
-    \begin{block}{Interpretacion visual de imagenes}
-      Textura.
-       
-    \end{block}
-\end{frame}
-%--- Next Frame ---%
-
-\begin{frame}{\secname : \subsecname}
-    \begin{block}{Interpretacion visual de imagenes}
-     Patrón.
-       
-    \end{block}
-\end{frame}
-
-%--- Next Frame ---%
-\begin{frame}{\secname : \subsecname}
-    \begin{block}{Interpretacion visual de imagenes}
-      Tamaño.
        
     \end{block}
 \end{frame}
@@ -253,6 +230,64 @@
        
     \end{block}
 \end{frame}
+%--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.7\textwidth]{fig:forma.png}
+    \caption{Elementos de interpretación visual - Forma.}
+    \label{}
+  \end{figure}
+\end{frame}
+
+%--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
+    \begin{block}{Interpretacion visual de imagenes}
+     Tamaño.
+       
+    \end{block}
+\end{frame}
+
+%--- Next Frame ---%
+\begin{frame}{\secname : \subsecname}
+    \begin{block}{Interpretacion visual de imagenes}
+      Textura.
+       
+    \end{block}
+\end{frame}
+
+%--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.7\textwidth]{fig:textura.png}
+    \caption{Elementos de interpretación visual - Textura.}
+    \label{}
+  \end{figure}
+\end{frame}
+
+%--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
+    \begin{block}{Interpretacion visual de imagenes}
+      Patrón.
+       
+    \end{block}
+\end{frame}
+
+%--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.7\textwidth]{fig:patron.png}
+    \caption{Elementos de interpretación visual - Patrón.}
+    \label{}
+  \end{figure}
+\end{frame}
 
 %--- Next Frame ---%
 \begin{frame}{\secname : \subsecname}
@@ -262,6 +297,21 @@
     \end{block}
 \end{frame}
 %--- Next Frame ---%
+
+
+
+
+\begin{frame}{\secname : \subsecname}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.45\textwidth]{fig:brillo.jpg}
+    \caption{Elementos de interpretación visual - Brillo.}
+    \label{}
+  \end{figure}
+\end{frame}
+
+%--- Next Frame ---%
+
 \begin{frame}{\secname : \subsecname}
     \begin{block}{Interpretacion visual de imagenes}
      Color.
@@ -270,14 +320,11 @@
 \end{frame}
 %--- Next Frame ---%
 
-
-\subsection{Interpretación visual}
-
 \begin{frame}{\secname : \subsecname}
   \begin{figure}
     \centering
-    \includegraphics[width=0.45\textwidth]{fig:rgb.png}
-    \caption{Teoría adivita del color.}
+    \includegraphics[width=0.5\textwidth]{fig:color.jpg}
+    \caption{Elementos de interpretación visual - Color.}
     \label{}
   \end{figure}
 \end{frame}
@@ -291,10 +338,8 @@
     \label{}
   \end{figure}
 \end{frame}
+
 %--- Next Frame ---%
-
-
-
 \begin{frame}{\secname : \subsecname}
   \begin{figure}
     \centering
@@ -304,6 +349,23 @@
   \end{figure}
 \end{frame}
 %--- Next Frame ---%
+
+\subsection{Interpretación visual}
+
+\begin{frame}{\secname : \subsecname}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.45\textwidth]{fig:rgb.png}
+    \caption{Teoría adivita del color.}
+    \label{}
+  \end{figure}
+\end{frame}
+
+%--- Next Frame ---%
+
+
+
+
 
 \begin{frame}{\secname : \subsecname}
   \begin{figure}
