--- a/Nivel2-A/Documentos/Videos/clase1.tex
+++ b/Nivel2-A/Documentos/Videos/clase1.tex
@@ -1,6 +1,6 @@
 \section{Introducción al radar}
 \subsection{Espectro electromagnético}
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
   \begin{figure}
     \centering
     \includegraphics[width=\textwidth]{fig:espectro.png}
@@ -11,7 +11,7 @@
 %--- Next Frame ---%
 
 \subsection{Funcionamiento de un radar}
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
     \begin{figure}
       \centering
       \includegraphics[scale=0.7]{fig:radar.png}
@@ -21,7 +21,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
   \begin{figure}
     \centering
     \movie[width = \textwidth,loop,autostart]{\centering\includegraphics[width=\textwidth]{fig:funcionamiento.png}}{./figs/fig:funcionamiento.mp4}
@@ -31,7 +31,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
   \begin{figure}
     \centering
     \includegraphics[scale=0.7]{01938fig13_1.jpg}
@@ -42,7 +42,7 @@
 %--- Next Frame ---%
 
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
   \begin{figure}
     \centering
     \movie[width = 0.95\textwidth,loop,autostart]{\centering\includegraphics[width=0.95\textwidth]{fig:imagen.png}}{./figs/fig:imagen.mp4}
@@ -54,7 +54,7 @@
 
 \subsection{Modos de adquisición}
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
   \begin{columns}
     \begin{column}{0.5\textwidth}
        \begin{figure}
@@ -78,7 +78,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
   \begin{columns}
     \begin{column}{0.5\textwidth}
        \begin{figure}
@@ -102,7 +102,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
   \begin{columns}
     \begin{column}{0.5\textwidth}
        \begin{figure}
@@ -126,7 +126,7 @@
     \end{columns}
 \end{frame}
 %--- Next Frame ---%
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
   \begin{columns}
     \begin{column}{0.5\textwidth}
        \begin{figure}
@@ -150,7 +150,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
 \begin{columns}
   \begin{column}{0.5\textwidth}
    \begin{block}{Óptico}
@@ -178,7 +178,5 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
-Muchas gracias.
-\end{frame}
+\gracias
 %--- Next Frame ---%
