--- a/Nivel2-A/Documentos/Videos/clase2.tex
+++ b/Nivel2-A/Documentos/Videos/clase2.tex
@@ -1,6 +1,6 @@
 \section{Interacción con el blanco}
 \subsection{¿Que es una imagen SAR?}
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
   \begin{columns}[t]
     \begin{column}{0.5\textwidth}
      \begin{block}{SAR}
@@ -24,7 +24,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
     \begin{figure}
       \centering
       \includegraphics[width=0.6\textwidth]{fig:sar2.jpg}
@@ -36,7 +36,7 @@
 
 \subsection{Mecanismos de scattering}
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
     \begin{figure}
       \centering
       \includegraphics[width=\textwidth]{fig:blancos.png}
@@ -46,7 +46,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
     \begin{figure}
       \centering
       \includegraphics[width=0.6\textwidth]{fig:rebotes2.jpg}
@@ -56,7 +56,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
   \begin{figure}
     \centering
     \includegraphics[width=\textwidth]{fig:espectrozoom.png}
@@ -66,7 +66,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-%\begin{frame}{\secname : \subsecname}
+%\begin{frame}{} \vskip0cm
 %    \begin{figure}
 %      \centering
 %      \includegraphics[width=0.9\textwidth]{fig:interacciones.png}
@@ -76,7 +76,7 @@
 %\end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
     \begin{figure}
       \centering
       \includegraphics[width=\textwidth]{fig:interacciones-1.png}
@@ -86,7 +86,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
     \begin{figure}
       \centering
       \includegraphics[width=\textwidth]{fig:interacciones-2.png}
@@ -96,7 +96,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
     \begin{figure}
       \centering
       \includegraphics[width=\textwidth]{fig:interacciones-4.png}
@@ -106,7 +106,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
     \begin{figure}
       \centering
       \includegraphics[width=\textwidth]{fig:interacciones-3.png}
@@ -119,7 +119,7 @@
 
 
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
     \begin{figure}
     \centering
     \subfloat[Banda C ($5.7cm$)]{\includegraphics[width=0.2\textwidth]{fig:C.png}}\hspace{1cm}
@@ -131,7 +131,7 @@
 %--- Next Frame ---%
 \subsection{Resolución espacial}
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
     A diferencia de la mayoría de los sistemas ópticos, los sistemas de radar tienen dos resoluciones:
     \begin{itemize}
       \item En rango, perdendicular a la dirección de movimiento del satélite.
@@ -140,7 +140,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
   Se calculan como:
     \begin{columns}
     \begin{column}{0.5\textwidth}
@@ -167,7 +167,5 @@
 %--- Next Frame ---%
 
 
-\begin{frame}{\secname : \subsecname}
-Muchas gracias.
-\end{frame}
+\gracias
 %--- Next Frame ---%
