--- a/Nivel2-A/Documentos/Videos/clase4.tex
+++ b/Nivel2-A/Documentos/Videos/clase4.tex
@@ -2,7 +2,7 @@
 
 \subsection{Ecuación de radar}
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
     \begin{block}{Definición}
       \begin{equation}
         P_r \pause \sim \frac{ P_t \pause G_t \pause G_r \pause \lambda^2 \pause \sigma}{\pause R^4}
@@ -11,7 +11,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
     \begin{block}{Definición}
       \begin{equation}
         P_r = \frac{ P_t  G_t  G_r  \lambda^2  \sigma}{ (4\pi)^3 \ R^4}
@@ -21,7 +21,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
 
   \begin{block}{Definición}
     Definimos el coeficiente de retrodispersión por unidad de área de un radar como
@@ -50,7 +50,7 @@
 
 \subsection{Polarización}
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
   \begin{figure}
     \centering
     \includegraphics[width=0.5\textwidth]{fig:onda.png}
@@ -60,7 +60,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
   \begin{figure}
     \centering
     \movie[width = 0.8\textwidth,loop,autostart]{\centering\includegraphics[width=0.8\textwidth]{fig:polarizado.png}}{./figs/fig:polarizado.mp4}
@@ -72,7 +72,7 @@
 
 
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
   \begin{figure}
     \centering
     \includegraphics[width=0.55\textwidth]{fig:polarizacion.png}
@@ -82,7 +82,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
   \begin{figure}
     \centering
     \subfloat[Polarización HH]{\includegraphics[width=0.25\textwidth]{fig:HH.jpg}}\hspace{1cm}
@@ -95,7 +95,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-%\begin{frame}{\secname : \subsecname}
+%\begin{frame}{} \vskip0cm
 %  En este caso la representación del coeficiente de backscatter es matricial
 %  \begin{columns}
 %    \begin{column}{0.5\textwidth}
@@ -127,7 +127,7 @@
 
 \subsection{Descoposición de Pauli}
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
      \begin{block}{Descomposición de Pauli}
       \begin{equation}
         R = \left(\frac{HH-VV}{\sqrt{2}}\right)^2
@@ -143,7 +143,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{} \vskip0cm
   \begin{figure}
     \centering
     \includegraphics[width=0.5\textwidth]{fig:rgbpauli}
@@ -153,7 +153,5 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
-Muchas gracias.
-\end{frame}
+\gracias
 %--- Next Frame ---%
