Actualizacion de las presentaciones al nuevo style de conae.

--- a/Nivel1-A/Documentos/Videos/clase1.tex
+++ b/Nivel1-A/Documentos/Videos/clase1.tex
@@ -2,7 +2,7 @@
 
 %--- Next Frame ---%
 \subsection{Definición}
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
 \begin{block}{Teledetección}
  Capacidad de obtener información de un objeto o fenómeno sin estar en contacto directo con él \footfullcite{Jensen 2008}.
 \end{block}
@@ -11,7 +11,7 @@
 
 \subsection{Sistemas de adquisición y órbitas}
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
 
 \begin{block}{Sensores y plataformas}
   Componentes en un sistema de adquisición:
@@ -26,7 +26,7 @@
 
 
 %--- Next Frame ---%
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \movie[width = 0.8\textwidth,loop,autostart]{\centering\includegraphics[width=0.8\textwidth]{fig:pasivo.png}}{./figs/fig:pasivo.mp4}
@@ -36,7 +36,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \movie[width = 0.8\textwidth,loop,autostart]{\centering\includegraphics[width=0.8\textwidth]{fig:activo.png}}{./figs/fig:activo.mp4}
@@ -46,14 +46,14 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   Algunos ejemplos de plataformas y sensores pasivos:
   \begin{itemize}
     \item<1->{Landsat 5 - TM}
     \item<2-> Landsat 7 - ETM
     \item<3-> Landsat 8 - OLI,TIRS
     \item<4-> TERRA - MODIS, ASTER, CERES, MISR, MOPITT
-    \item<5-> AQUA - MODIS, AIRS, AMSU, CERES, AMSR-E, HSB 
+    \item<5-> AQUA - MODIS, AIRS, AMSU, CERES, AMSR-E, HSB
     \item<6-> Sentinel 2A - MSI
     \item<7-> Sentinel 2B - MSI
     \item<8-> Sentinel 3A - SLSRT, OLCI, SRAL, DORIS, MWR, LRR, GNSS
@@ -61,7 +61,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
 \only<1>{Tipos de órbitas.}
 \only<2->{
 \begin{block}{Clasificación de órbitas}
@@ -74,7 +74,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \movie[width = 0.4\textwidth,loop,autostart]{\centering\includegraphics[width=0.4\textwidth]{fig:polar.png}}{./figs/fig:polar.mp4}
@@ -83,14 +83,14 @@
   \end{figure}
 \end{frame}
 %--- Next Frame ---%
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
 \only<1>{Resolución espacial.}
 
 \end{frame}
 
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
     \begin{block}{Definición}
         Es la capacidad del sensor de distinguir objetos en el terreno.%ver definición
     \end{block}
@@ -98,7 +98,7 @@
 
 \subsection{Resolución espacial y temporal}
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.8\textwidth]{fig:anchobarrido.png}
@@ -108,7 +108,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.7\textwidth]{fig:resolucion1.png}
@@ -119,7 +119,7 @@
 %--- Next Frame ---%
 
 
-%\begin{frame}{\secname : \subsecname}
+%\begin{frame}{}
  %   \begin{figure}[h!]
   %      \centering
    %     \includegraphics[width=0.5\textwidth]{fig:pixel.png}
@@ -129,7 +129,7 @@
 
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \movie[width = 0.8\textwidth,loop,autostart]{\centering\includegraphics[width=0.8\textwidth]{fig:pixel6.png}}{./figs/fig:pixel6.mp4}
@@ -139,7 +139,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \movie[width = 0.8\textwidth,loop,autostart]{\centering\includegraphics[width=0.8\textwidth]{fig:pixel3.png}}{./figs/fig:pixel3.mp4}
@@ -149,7 +149,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \movie[width = 0.8\textwidth,loop,autostart]{\centering\includegraphics[width=0.8\textwidth]{fig:pixel1.png}}{./figs/fig:pixel1.mp4}
@@ -161,7 +161,7 @@
 
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
     \begin{figure}[h!]
         \centering
         \includegraphics[width=0.7\textwidth]{fig:10m.jpg}
@@ -170,7 +170,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
     \begin{figure}[h!]
         \centering
         \includegraphics[width=0.7\textwidth]{fig:30m.jpg}
@@ -179,7 +179,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
     \begin{figure}[h!]
         \centering
         \includegraphics[width=0.7\textwidth]{fig:90m.jpg}
@@ -188,7 +188,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
     \begin{figure}[h!]
         \centering
         \includegraphics[width=0.7\textwidth]{fig:300m.jpg}
@@ -197,7 +197,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
     \begin{figure}[h!]
         \centering
         \includegraphics[width=0.7\textwidth]{fig:1000m.jpg}
@@ -206,12 +206,12 @@
 \end{frame}
 %--- Next Frame ---%
 %--- Next Frame ---%
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
 \only<1>{Resolución temporal.}
 
 \end{frame}
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
     \begin{block}{Definición}
         Es el tiempo de revisita.
     \end{block}
@@ -219,17 +219,17 @@
 %--- Next Frame ---%
 
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
     \begin{figure}[h!]
     \centering
     \movie[width = 0.6 \textwidth,loop]{\centering\includegraphics[width=0.6\textwidth]{fig:maria.png}}{./figs/fig:maria.mp4}
     \caption{Evolución del huracán María en el mes de septiembre de 2017. (\href{https://goo.gl/M5595z}{https://goo.gl/M5595z}).}
     \end{figure}
-\end{frame} 
+\end{frame}
 
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
     \begin{figure}[h!]
         \centering
         \includegraphics[width=0.6\textwidth]{fig:lake-beg.jpeg}
@@ -239,7 +239,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
     \begin{figure}[h!]
         \centering
         \includegraphics[width=0.6\textwidth]{fig:lake-end.jpeg}
@@ -249,7 +249,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
     \begin{figure}[h!]
         \centering
         \includegraphics[width=0.6\textwidth]{fig:lake-aft.jpeg}
@@ -260,7 +260,7 @@
 
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
     \begin{figure}[h!]
         \centering
         \includegraphics[width=0.7\textwidth]{fig:evst.png}
@@ -270,7 +270,5 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname}
-Muchas gracias.
-\end{frame}
+\gracias
 %--- Next Frame ---%
