--- a/Nivel1-A/Documentos/Videos/clase3.tex
+++ b/Nivel1-A/Documentos/Videos/clase3.tex
@@ -1,7 +1,7 @@
 \section{Formación de imágenes satelitales}
 \subsection{Partes de una imagen}
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \movie[width = 0.8\textwidth,loop,autostart]{\centering\includegraphics[width=0.8\textwidth]{fig:fimagen.png}}{./figs/fig:fimagen.mp4}
@@ -12,7 +12,7 @@
 % modificar el video, no me cierra nada, es bastante confuso, o mejorar o cambiar.
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
 \begin{block}{Píxel}
   Un píxel es el mínimo elemento de una imagen. Cada píxel tiene un único valor numérico.
 \end{block}\pause
@@ -23,7 +23,7 @@
 %--- Next Frame ---%
 
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{block}{Imagen}
     En general vamos a hablar de una imagen, o un raster, como el conjunto de bandas.
   \end{block}
@@ -32,24 +32,24 @@
 
 \subsection{Resolución espectral y radiométrica}
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{block}{Radiometría}
     Resolución radiométrica
   \end{block}
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{block}{8 bits}
    \begin{equation}
             2^8 = 0-255
         \end{equation}
   \end{block}
-\end{frame} 
+\end{frame}
 
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.7\textwidth]{fig:8bit.jpg}
@@ -60,17 +60,17 @@
 %--- Next Frame ---%
 
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{block}{4 bits}
    \begin{equation}
             2^4 = 0-15
         \end{equation}
   \end{block}
-\end{frame} 
+\end{frame}
 
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.7\textwidth]{fig:4bit.jpg}
@@ -81,17 +81,17 @@
 %--- Next Frame ---%
 
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{block}{2 bits}
    \begin{equation}
             2^2 = 0-3
         \end{equation}
   \end{block}
-\end{frame} 
+\end{frame}
 
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.7\textwidth]{fig:2bit.jpg}
@@ -105,17 +105,17 @@
 
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{block}{1 bits}
    \begin{equation}
             2^2 = 0-1
         \end{equation}
   \end{block}
-\end{frame} 
+\end{frame}
 
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.7\textwidth]{fig:1bit.jpg}
@@ -127,14 +127,14 @@
 
 
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
     \begin{block}{Definición}
         En la capacidad de distinguir cambios en la radiancia que proviene de un píxel y como ésta se cuantifica.
     \end{block}
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.8\textwidth]{fig:eslo.png}
@@ -144,7 +144,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.8\textwidth]{fig:eshi.png}
@@ -154,7 +154,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
     \begin{block}{Definición}
         Es la capacidad del sensor de distinguir regiones del espectro electromagnético.
     \end{block}
@@ -163,7 +163,7 @@
 
 %\subsection{Proyección sobre el terreno}
 
-%\begin{frame}{\secname : \subsecname}
+%\begin{frame}{}
 %  \begin{figure}
 %    \centering
     %\includegraphics[width=\textwidth]{fig:espectro.png}
@@ -173,7 +173,7 @@
 %\end{frame}
 %--- Next Frame ---%
 
-%\begin{frame}{\secname : \subsecname}
+%\begin{frame}{}
 %  \begin{figure}
 %    \centering
     %\includegraphics[width=\textwidth]{fig:espectro.png}
@@ -183,7 +183,7 @@
 %\end{frame}
 %--- Next Frame ---%
 
-%\begin{frame}{\secname : \subsecname}
+%\begin{frame}{}
 %  \begin{figure}
 %    \centering
     %\includegraphics[width=\textwidth]{fig:espectro.png}
@@ -193,7 +193,7 @@
 %\end{frame}
 %--- Next Frame ---%
 
-%\begin{frame}{\secname : \subsecname}
+%\begin{frame}{}
 %  \begin{figure}
 %    \centering
 %    %\includegraphics[width=\textwidth]{fig:espectro.png}
@@ -205,7 +205,5 @@
 
 
 
-\begin{frame}{\secname : \subsecname}
-Muchas gracias.
-\end{frame}
+\gracias
 %--- Next Frame ---%
