--- a/Nivel1-A/Documentos/Videos/clase4.tex
+++ b/Nivel1-A/Documentos/Videos/clase4.tex
@@ -1,7 +1,7 @@
 \section{Índices espectrales}
 \subsection{Análisis espectral}
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.8\textwidth]{fig:firmasin.png}
@@ -11,7 +11,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.8\textwidth]{fig:firmavar.png}
@@ -23,7 +23,7 @@
 
 \subsection{Índices espectrales}
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.8\textwidth]{fig:firmasalto.png}
@@ -34,7 +34,7 @@
 
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
 \begin{block}{Normalized Difference Vegetation Index - NDVI}
   Definimos al NDVI como
   \begin{equation}
@@ -51,7 +51,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.7\textwidth]{fig:biomasa.png}
@@ -61,7 +61,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
     \begin{block}{Soil Adjusted Vegetation Index - SAVI}
         \begin{equation}
             SAVI = \frac{\rho_n-\rho_r}{\rho_n+\rho_r+L}(1+L)
@@ -78,7 +78,7 @@
     \end{block}
 \end{frame}
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
     \begin{block}{Enhanced Vegetation Index - EVI}
         \begin{equation}
             EVI = G\frac{\rho_n - \rho_r}{\rho_n+C_1\rho_r-C_2\rho_b+L}(1+L)
@@ -93,7 +93,5 @@
     \end{itemize}
 \end{frame}
 
-\begin{frame}{\secname : \subsecname}
-Muchas gracias.
-\end{frame}
+\gracias
 %--- Next Frame ---%
