--- a/Nivel1-A/Documentos/Videos/clase5.tex
+++ b/Nivel1-A/Documentos/Videos/clase5.tex
@@ -1,14 +1,14 @@
 \section{Métodos de clasificación}
 
 \subsection{Clasificación}
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
 \begin{block}{Concepto de clasificación}
   Clasificar es convertir valores espectrales en clases de información.
 \end{block}
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
 \begin{block}{Clase de información}
   Una clase de información es la que describe una categoría en el terreno. \pause Nuestro esquema debe ser completo y sin solapamiento.
 \end{block}
@@ -19,7 +19,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{table}[hbt]
       \centering
       \begin{tabular}{p{12cm}c}
@@ -46,7 +46,7 @@
   \end{table}
 \end{frame}
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{block}{Esquema general de clasificación}
     \begin{center}
     \smartdiagramset{back arrow disabled=true,text width = 2.6cm,module x sep=3.75cm}
@@ -56,7 +56,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \subfloat[Imagen original]{\includegraphics[width=0.3\textwidth]{fig:rgb-class.jpg}}
@@ -69,7 +69,7 @@
 %--- Next Frame ---%
 
 \subsection{Métodos supervisados}
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
     \begin{center}
       \smartdiagramset{back arrow disabled=true,text width = 2.6cm,module x sep=3.75cm,
       additions={
@@ -90,7 +90,7 @@
 
 
 \subsection{Clustering}
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{center}
   \smartdiagramset{back arrow disabled=true,text width = 2.6cm,module x sep=3.75cm,
   additions={
@@ -111,7 +111,7 @@
 
 \subsection{k-means}
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.4\textwidth]{fig:cluster-black}
@@ -121,7 +121,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.4\textwidth]{fig:cluster-1}
@@ -131,7 +131,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.4\textwidth]{fig:cluster-2}
@@ -141,7 +141,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.4\textwidth]{fig:cluster-3}
@@ -151,7 +151,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.4\textwidth]{fig:cluster-4}
@@ -161,7 +161,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.4\textwidth]{fig:cluster-10}
@@ -171,7 +171,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \subfloat[Clases de información]{\includegraphics[width=0.4\textwidth]{fig:cluster-info}\label{fig:kmeans2}}
@@ -186,7 +186,5 @@
 
 
 
-\begin{frame}{\secname : \subsecname}
-Muchas gracias.
-\end{frame}
+\gracias
 %--- Next Frame ---%
