--- a/Nivel1-A/Documentos/Videos/clase6.tex
+++ b/Nivel1-A/Documentos/Videos/clase6.tex
@@ -1,6 +1,6 @@
 %\section{CONAE y aplicaciones}
 %\subsection{Plan espacial nacional}
-%\begin{frame}{\secname : \subsecname}
+%\begin{frame}{}
  % \begin{figure}
   %  \centering
    % \includegraphics[width=0.65\textwidth]{fig:plan}
@@ -12,7 +12,7 @@
 
 \subsection{Aplicaciones de la teledetección}
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.65\textwidth]{fig:app-cultivo.jpg}
@@ -22,7 +22,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.55\textwidth]{fig:app-cambio.jpg}
@@ -32,7 +32,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.45\textwidth]{fig:app-turb.png}
@@ -42,7 +42,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.60\textwidth]{fig:app-exp.png}
@@ -53,7 +53,7 @@ EXPANSIÓN URBANA Comodoro Rivadavia 2017}}
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{\secname : \subsecname}
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.60\textwidth]{fig:app-dem.png}
@@ -65,7 +65,5 @@ EXPANSIÓN URBANA Comodoro Rivadavia 2017}}
 
 
 
-\begin{frame}{\secname : \subsecname}
-Muchas gracias.
-\end{frame}
+\gracias
 %--- Next Frame ---%
