--- a/Nivel1-A/Documentos/Videos/preamble.tex
+++ b/Nivel1-A/Documentos/Videos/preamble.tex
@@ -1,7 +1,7 @@
 % Paquetes de la ams
 \usepackage{amsmath,amsthm,amssymb,amsfonts}
 % Codificacion UTF-8
-\usepackage[utf8]{inputenc}
+%\usepackage[utf8]{inputenc}
 % Tablas e imagenes en espaniol
 \usepackage[spanish,es-tabla]{babel}
 % Mejores graficos
@@ -11,7 +11,8 @@
 % Links a urls
 \usepackage{url}
 % Linkear referencias en pdfs
-\usepackage{hyperref}
+\usepackage{fontspec}
+%\usepackage{hyperref}
 % Texto mas lindo para los pie de figura
 \usepackage[margin=10pt,font=small,labelfont=bf, labelsep=endash]{caption}
 \usepackage{siunitx}
